[package]
name = "mavlink-debugger"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
crossterm = "0.29.0"
chrono = "0.4"
mavlink = "0.15.0"
ratatui = "0.29.0"
color-eyre = "0.6.5"
strum = { version = "0.27.2", features = ["derive"] }
json5 = "0.4.1"
serde_json = "1.0.143"
